<resources>
    <string name="app_name">حقق ربحك</string>
    <string name="name_hint">الاسم ثلاثي</string>
    <string name="email_hint">البريد الإلكتروني</string>
    <string name="password_hint">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="forget_password">هل نسيت كلمة المرور؟</string>
    <string name="create">إنشاء حساب جديد</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complete_field">أكمل الحقل</string>
    <string name="is">هل </string>
    <string name="yourDOB"> تاريخ ميلادك؟</string>
    <string name="select_country">اختر الدولة</string>
    <string name="instructions">1. اجمع النقاط من طرق الربح المختلفة الموجودة في الصفحة الرئيسية، وهي: مسابقات وأسئلة، ألعاب الذكاء والانتباه، قصص وروايات، ومنوعات.\n\n2. عند جمعك 1000 نقطة تدخل السحب على جائزة بقيمة 50$ ل 3 أشخاص وسيتم إجراء السحب بمجرد وصول عدد الأشخاص إلى 500 شخص، ويمكنك مراجعة صفحة السحب في الإعدادات لتعرف هل دخلت السحب أم لا.\n\n3. الشخص الأول في الترتيب عند إجراء عملية السحب -الأعلى نقاطاً- له جائزة بقيمة 50$ بدون سحب.\n\n4. سيتم إجراء السحب بشكل دوري وذلك عند تحقق الشروط المطلوبة، ويمكنكم متابعة صفحاتنا على مواقع التواصل الاجتماعي لمعرفة مواعيد السحب والأشخاص الفائزين.\n\n5. بعد إجراء عملية السحب، الأشخاص الفائزون سيتم تخفيض نقاطهم إلى 250 نقطة ويمكنهم المنافسة مرة أخرى، أما الأشخاص الذين لم يحالفهم الحظ لديهم فرصة لدخول السحب والمنافسة مجدداً ولكن يتم خصم 500 نقطة من مجموع نقاطهم وذلك ليتسنى للأشخاص الجدد المنافسة. \n\n6. عملية جمع النقاط ليست بالأمر الصعب بحيث أنك تستطيع اتباع خطة وهي إحراز 100 نقطة يومياً فخلال 10 أيام تكون قد جمعت 1000 نقطة ودخلت السحب بنجاح، ولتسهيل ذلك يمكنك معرفة النقاط التي أحرزتها خلال اليوم من خلال بند نقاط اليوم في صفحة النقاط. \n\n7. يرجى إكمال الملف الشخصي وتعبئة جميع البيانات المطلوبة بشكل صحيح ودقيق وخصوصاً رقم الهاتف والعنوان لنتمكن من التواصل معكم. \n\n8. أي شخص يواجه مشكلة ما أو خلل في التطبيق عليه التوجه لصفحة مساعدة في الإعدادات وشرح المشكلة الخاصة به وإرفاق لقطات شاشة للمشكلة -إن أمكن-، أو مراسلتنا على مواقع التواصل الاجتماعي وسنقوم بحل المشكلة في أسرع وقت إن شاء الله. \n\n9. التطبيق هو مشروع فردي والهدف منه ليس الربح وإنما مساعدة الناس وإعادة توزيع الدخل، لذلك فإن جميع الأرباح والجوائز تعتمد على الإعلانات فمشاهدتك للإعلانات ونقرك عليها هو من يساعد في استمرار العمل. \n\n10. من مبدأ مساعدة المحتاجين فإن الأشخاص الذين مر عليهم 10 سحوبات بدون ربح وكان مجموع نقاطهم أكثر من 5000 نقطة أو كانوا ضمن أوائل الترتيب وأثبتوا حاجتهم المادية فسيتم إحصاؤهم وتخصيص جائزة لهم، وسيتم الاتفاق على آلية لدعمهم بشكل مستمر إن رغبوا بذلك.</string>
    <string name="notification_title">لقد دخلت السحب بنجاح\nانقر للاطلاع على التفاصيل.</string>
    <string name="default_notification_channel_id">remote_notification_channel</string>

    <array name="countries">
        <item>الأردن</item>
        <item>الإمارات</item>
        <item>البحرين</item>
        <item>الجزائر</item>
        <item>السعودية</item>
        <item>السودان</item>
        <item>الصومال</item>
        <item>العراق</item>
        <item>الكويت</item>
        <item>المغرب</item>
        <item>اليمن</item>
        <item>تونس</item>
        <item>جزر القمر</item>
        <item>جيبوتي</item>
        <item>سوريا</item>
        <item>عٌمان</item>
        <item>فلسطين</item>
        <item>قطر</item>
        <item>لبنان</item>
        <item>ليبيا</item>
        <item>مصر</item>
        <item>موريتانيا</item>
        <item>الولايات المتحدة الأمريكية</item>
        <item>المملكة المتحدة</item>
        <item>كندا</item>
        <item>أستراليا</item>
        <item>تركيا</item>
        <item>الفلبين</item>
        <item>الهند</item>
        <item>بنغلاديش</item>
        <item>جزر المالديف</item>
        <item>تايلاند</item>
        <item>إندونيسيا</item>
        <item>إيران</item>
        <item>لاتفيا</item>
        <item>ألمانيا</item>
        <item>إثيوبيا</item>
        <item>فرنسا</item>
        <item>الصين</item>
        <item>إسبانيا</item>
        <item>روسيا</item>
        <item>ياكستان</item>
        <item>ماليزيا</item>
        <item>نيجيريا</item>
        <item>السويد</item>
        <item>البرازيل</item>
        <item>إيطاليا</item>
        <item>ليتوانيا</item>
        <item>هولندا</item>
        <item>المكسيك</item>
        <item>أوكرانيا</item>
        <item>كوريا الجنوبية</item>
        <item>جنوب أفريقيا</item>
        <item>النمسا</item>
        <item>كولومبيا</item>
        <item>سنغافورة</item>
        <item>بلجيكا</item>
        <item>بولندا</item>
        <item>البرتغال</item>
        <item>اليابان</item>
        <item>كازاخستان</item>
        <item>فيتنام</item>
        <item>سويسرا</item>
        <item>الأوروغواي</item>
        <item>كرواتيا</item>
        <item>مالطا</item>
        <item>المجر</item>
        <item>فنزويلا</item>
        <item>الدنمارك</item>
    </array>

    <array name="select_photo">
        <item>التقط صورة</item>
        <item>اختر من المعرض</item>
        <item>إلغاء</item>
    </array>

</resources>